test/tests/stages/15_arrays_and_pointer_arithmetic/valid/subscripting/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  identifier(arr)
  [
  const int(2)
  ]
  ;
  }
