test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_array_declarator_3.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  [
  const int(3)
  ]
  identifier(arr)
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  const int(0)
  ;
  }
